# gamma

./: Cargo.toml  PLAN.md  README.md
examples/: 01_open_window.rs  02_basic_setup.rs  03_draw_background.rs  04_basic_input.rs  04_basic_keyboard_input.rs  05_basic_audio.rs
src/: builder.rs  context.rs  gamma.rs  lib.rs  runtime.rs
src/audio/: mod.rs  sound.rs
src/engine/: input.rs  lifecycle.rs  mod.rs  runtime.rs  time.rs
src/rendering/: clear.rs  context.rs  frame.rs  mod.rs  pipeline.rs  texture.rs
